# star-toml

./: .gitignore  Cargo.toml  PROJECT.md  README.md  STAR_TOML_V26_6_28_ADMISSION_RECEIPT.md  TEST_INFRA.md  TEST_READY.md  VERIFIER_REPORT.md  mcp_server.py  rustfmt.toml  typos.toml
.agents/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  mcp.json
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  plan.md  progress.md
.agents/sub_orch_e2e/: BRIEFING.md  ORIGINAL_REQUEST.md  SCOPE.md  handoff.md  progress.md
.agents/sub_orch_e2e/worker_e1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/sub_orch_e2e/worker_e1_revised/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/sub_orch_e2e/worker_e2_test_ready_template/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/sub_orch_e2e/worker_e2_verify/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/sub_orch_e2e/worker_e2_write_tests/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/sub_orch_impl/: BRIEFING.md  ORIGINAL_REQUEST.md  SCOPE.md  handoff.md  progress.md
.agents/sub_orch_impl/auditor_i5/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/sub_orch_impl/challenger_i5_tier5/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  plan.md  progress.md
.agents/sub_orch_impl/worker_i1_version_bump/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/sub_orch_impl/worker_i2_typestate_trusted/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/sub_orch_impl/worker_i3_macros/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/sub_orch_impl/worker_i4_save_lifecycle/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/sub_orch_impl/worker_i5_cleanup/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/sub_orch_impl/worker_i5_hardening/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/sub_orch_impl/worker_i5_safety_release/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/victory_auditor/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.github/workflows/: ci.yml  release.yml
docs/: LSP.md
docs/audit/v26.6.28/: FINAL_V26_6_28_FINISH_AUDIT.md  agent-01-repo-tag-tests.md  agent-02-typestate-admission.md  agent-03-source-layer-env.md  agent-04-validation-error-topology.md  agent-05-path-policy.md  agent-06-witness-q-config.md  agent-07-ocel-wasm4pm-compat.md  agent-08-verifier-counterexamples.md  agent-09-docs-jira-examples.md  agent-10-final-standing.md
docs/audit/v26.6.28-adversarial/: FINAL_ADVERSARIAL_RELEASE_GAP_AUDIT.md  SETUP.md  agent-01-release-packaging.md  agent-02-typestate-bypass.md  agent-03-witness-qconfig.md  agent-04-path-security.md  agent-05-validation-errors.md  agent-06-ocel-feature-boundary.md  agent-07-verifier-integrity.md  agent-08-docs-examples-release-claims.md  agent-09-cross-platform-semver-api.md  agent-10-final-gap-report.md
docs/jira/v26.6.28/: BRCE_OVERLAY.md  README.md  ST-101_typestate.md  ST-102_trusted_api.md  ST-103_source_bounds.md  ST-104_layer_bounds.md  ST-105_env_bounds.md  ST-106_type_bounds.md  ST-107_validation_bounds.md  ST-108_path_bounds.md  ST-108_path_bounds_claude_instructions.md  ST-109_rewrite_witness_bounds.md  ST-110_error_topology_lsp.md  (+1 more)
docs/ontology/: star-toml.core.ttl  star-toml.detectors.ttl  star-toml.ocel.ttl
examples/: README.md  arrays_of_tables.rs  basic_admitted_config.rs  canonical_save.rs  dfcm_axes_matrix.rs  dfcm_common_patterns.rs  env_overrides.rs  exploratory_unknown_fields.rs  layered_profiles.rs  ocel_lifecycle_export.rs  path_policy_sandbox.rs  red_team_counterexamples.rs  strict_unknown_fields.rs  validate.rs  witness_and_q_config.rs
examples/config_patterns/: database.toml  feature_flags.toml  invalid_path_traversal.toml  invalid_unknown_field.toml  nested_arrays.toml  paths.toml  service.dev.toml  service.prod.toml  service.toml  web_app.toml  workers.toml
src/: error.rs  events.rs  expand.rs  lib.rs  loader.rs  merge.rs  ocel.rs  path.rs  reports.rs  schema.rs  validation.rs
star-toml-derive/: Cargo.toml
star-toml-derive/src/: lib.rs
star-toml-lsp/: Cargo.toml  README.md
star-toml-lsp/src/: analyzer.rs  diagnostics.rs  gate.rs  lib.rs  main.rs  server.rs  state.rs  telemetry.rs
star-toml-lsp/tests/: diagnostics.rs  example_fixtures.rs
tests/: adversarial.rs  brce.rs  e2e_tests.rs  ocel_export.rs  validation_macros.rs  verifier.rs
