[package]
name = "star-toml"
version = "26.6.28"
edition = "2021"
rust-version = "1.82"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
license = "MIT"
description = "Framework for loading, layering, and validating any *.toml configuration file"
repository = "https://github.com/seanchatmangpt/star-toml"
homepage = "https://github.com/seanchatmangpt/star-toml"
readme = "README.md"
keywords = ["config", "toml", "layered", "validation"]
categories = ["development-tools", "config"]
exclude = [".agents/", "PROJECT.md", "TEST_INFRA.md", "TEST_READY.md", "mcp_server.py", "STAR_TOML_V26_6_28_ADMISSION_RECEIPT.md", "docs/", ".gitignore"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "1.1.0", features = ["preserve_order"] }
thiserror = "2.0"
star-toml-derive = { version = "26.6.28", path = "star-toml-derive" }
blake3 = "1"
wasm4pm-compat = "26.6"

[dev-dependencies]
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
unexpected_cfgs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "warn"
expect_used = "warn"

[[bin]]
name = "verifier_report"
path = "src/bin/verifier_report.rs"

[features]
e2e_tests = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
members = [
    ".",
    "star-toml-derive",
    "star-toml-lsp",
]
